--- a/airbnb/package.json
+++ b/airbnb/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.32.2",
     "react-icons": "^4.4.0",
