--- a/airbnb/package.json
+++ b/airbnb/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "moment": "^2.29.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-cookie": "^4.1.1",
@@ -28,6 +29,7 @@
     "sdk": "^0.5.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
+    "swiper": "^8.2.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
